--- a/API/.env
+++ b/API/.env
@@ -1,5 +1,5 @@
-DB_USER = gobake
-DB_PASSWORD = @Go_bake33
-DB_HOST = localhost
-DB_NAME = go_bake
-SECRET_KEY = blabla
+DB_USER = lyc2pdmuUr
+DB_PASSWORD = 219ZWIwEEC
+DB_HOST = remotemysql.com
+DB_NAME = lyc2pdmuUr
+SECRET_KEY = secret
