--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
     "sass-loader": "^11.1.1",
+    "sweetalert": "^2.1.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
