--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
+    "router-dom": "^2.1.4",
     "sass-loader": "^11.1.1",
     "sweetalert": "^2.1.2",
     "web-vitals": "^1.1.2"
