--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
@@ -22,6 +23,7 @@
     "redux-thunk": "^2.3.0",
     "router-dom": "^2.1.4",
     "sass-loader": "^11.1.1",
+    "styled-components": "^5.3.0",
     "sweetalert": "^2.1.2",
     "web-vitals": "^1.1.2"
   },
